--- a/languages/EN.json
+++ b/languages/EN.json
@@ -13,6 +13,6 @@
     "deletedString": " has been deleted!",
     "oldValue": "Old Value:",
     "newValue": "New Value:",
-    "value": "Value":,
+    "value": "Value:",
     "type": "Flag Type:"
 }
