--- a/languages/PT.json
+++ b/languages/PT.json
@@ -15,5 +15,8 @@
     "newValue": "Valor Novo:",
     "value": "Valor:",
     "type": "Tipo de Flag:"
+  },
+  "metaStrings": {
+    "name": "Portuguese"
   }
 }
