--- a/languages/TL.json
+++ b/languages/TL.json
@@ -15,5 +15,8 @@
     "newValue": "Bagong Halaga:",
     "value": "Halaga:",
     "type": "Uri:"
+  }, 
+  "metaStrings": {
+    "name": "Tagalog"
   }
 }
