--- a/languages/ES.json
+++ b/languages/ES.json
@@ -15,5 +15,8 @@
     "newValue": "Valor nuevo:",
     "value": "Valor:",
     "type": "Tipo de FFlag:"
+  },
+  "metaStrings": {
+    "name": "Spanish"
   }
 }
