--- a/languages/EN.json
+++ b/languages/EN.json
@@ -6,7 +6,8 @@
     "degradedString2": "has degraded performance.",
     "downString1": "is down.",
     "downString2": "is experiencing an outage.",
-    "responseTime": "Response Time:",
+    
+    "responseTime": "Response Time",
     "httpCode": "Status Code",
     "incidentId": "Incident ID",
     "machineId": "Roblox Machine ID",
