--- a/languages/PT.json
+++ b/languages/PT.json
@@ -6,7 +6,7 @@
     "degradedString2": "está com desempenho degradado.",
     "downString1": "caiu.",
     "downString2": "está experienciando uma queda.",
-    "responseTime": "Tempo de Resposta:",
+    "responseTime": "Tempo de Resposta",
     "httpCode": "Código de Status",
     "incidentId": "ID do Incidente",
     "machineId": "ID da Máquina do Roblox",
