--- a/languages/ZH.json
+++ b/languages/ZH.json
@@ -17,10 +17,10 @@
     "addedString": "已被添加！",
     "modifiedString": "已被更改！",
     "deletedString": "已被删除。",
-    "oldValue": "更改之前的值:",
-    "newValue": "更改之后的值:",
-    "value": "值:",
-    "type": "快速标志种类:"
+    "oldValue": "更改之前的数值:",
+    "newValue": "更改之后的数值:",
+    "value": "数值:",
+    "type": "标志类型:"
   },
   "metaStrings": {
     "name": "Chinese"
