--- a/languages/ID.json
+++ b/languages/ID.json
@@ -5,7 +5,13 @@
     "degradedString1": "sedang mengalami masalah.",
     "degradedString2": "sedang mengalami degradasi perfoma.",
     "downString1": "sedang mati.",
-    "downString2": "sedang mengalami pemadaman."
+    "downString2": "sedang mengalami pemadaman.",
+    "responseTime": "Waktu tanggapan:",
+    "httpCode": "Kode status",
+    "incidentId": "ID Kejadian",
+    "machineId": "ID Mesin Roblox",
+    "responseMessage": "Pesan Tanggapan",
+    "errorMessage": "Pesan Error"
   },
   "fastFlagStrings": {
     "addedString": "telah ditambah!",
