--- a/languages/ZH.json
+++ b/languages/ZH.json
@@ -9,7 +9,7 @@
     "responseTime": "延迟",
     "httpCode": "HTTP 状态码",
     "incidentId": "事故编号",
-    "machineId": "计算机编号",
+    "machineId": "服务器编号",
     "responseMessage": "返回信息",
     "errorMessage": "错误码"
   },
