--- a/languages/UWU.json
+++ b/languages/UWU.json
@@ -22,7 +22,7 @@
     "value": "Vawue:",
     "type": "Fwag Type:"
   },
-  "metaStrings: {
+  "metaStrings": {
     "name": "English (Furry)"
   }
 }
