--- a/languages/UWU.json
+++ b/languages/UWU.json
@@ -1,28 +1,28 @@
 {
-  "outageStrings": {
-    "upString1": "ish back up!",
-    "upString2": "hash impwoved pewfowmance.",
-    "degradedString1": "ish expewiencing issuesh.",
-    "degradedString2": "hash degwaded pewfowmance.",
-    "downString1": "ish down.",
-    "downString2": "ish expewiencing an outage.",
-    "responseTime": "Wesponse time",
-    "httpCode": "Statush code",
-    "incidentId": "Incident id",
-    "machineId": "Wobwox machine id",
-    "responseMessage": "Wesponse message",
-    "errorMessage": "Ewwow message"
-  },
-  "fastFlagStrings": {
-    "addedString": "hash been added!",
-    "modifiedString": "hash been modified!",
-    "deletedString": "hash been deweted!",
-    "oldValue": "Owd vawue:",
-    "newValue": "New vawue:",
-    "value": "Vawue:",
-    "type": "Fwag type:"
-  },
-  "metaStrings": {
-    "name": "Engwish"
-  }
+    "outageStrings": {
+        "upString1": "is *whispers to self* back u-up?!?1",
+        "upString2": "has impwuvd pewfowmance. ^w^",
+        "degradedString1": "is *whispers to self* expewiencing issues.",
+        "degradedString2": "*huggles tightly* has degwaded pewfowmance.",
+        "downString1": "is *whispers to self* down.",
+        "downString2": "is *whispers to self* expewiencing an outage.",
+        "responseTime": "Wesponse Time",
+        "httpCode": "Status OwO Code",
+        "incidentId": "Incident UwU ID",
+        "machineId": "Wobwox Machinye ID",
+        "responseMessage": "Wesponse Message",
+        "errorMessage": "Ewwow Message"
+    },
+      "fastFlagStrings": {
+        "addedString": "has been added!",
+        "modifiedString": "has been modified!",
+        "deletedString": "has been deweted!",
+        "oldValue": "Owd Vawue:",
+        "newValue": "New Vawue:",
+        "value": "Vawue:",
+        "type": "*walks away* Fwag *screams* Type:"
+    },
+    "metaStrings": {
+        "name": "Engwish"
+    }
 }
