--- a/languages/ID.json
+++ b/languages/ID.json
@@ -6,7 +6,7 @@
     "degradedString2": "sedang mengalami degradasi perfoma.",
     "downString1": "sedang mati.",
     "downString2": "sedang mengalami pemadaman.",
-    "responseTime": "Waktu tanggapan:",
+    "responseTime": "Waktu tanggapan",
     "httpCode": "Kode status",
     "incidentId": "ID Kejadian",
     "machineId": "ID Mesin Roblox",
