--- a/languages/TL.json
+++ b/languages/TL.json
@@ -5,7 +5,7 @@
     "degradedString1": "is experiencing issues.",
     "degradedString2": "ay nakakaranas ng pag bagal ng koneksyon.",
     "downString1": "ay hindi gumagana.",
-    "downString2": "ay nakakaranas ng kawalan ng koneksyon."
+    "downString2": "ay nakakaranas ng kawalan ng koneksyon.",
     "responseTime": "Oras Ng Pagtugon",
     "httpCode": "Kasalukuyang Katayuan",
     "incidentId": "Id ng Insidente",
