--- a/languages/TH.json
+++ b/languages/TH.json
@@ -1,6 +1,6 @@
 {
   "outageStrings": {
-    "upString1": "กลับมาเเล้ว!",
+    "upString1": "กลับมาใช้งานได้เเล้ว!",
     "upString2": "ได้ทําการปรับปรุงประสิทธิภาพ",
     "degradedString1": "กําลังได้รับการประสบปัญหา",
     "degradedString2": "กําลังได้รับประสิทธิภาพที่ลดลง",
@@ -8,7 +8,7 @@
     "downString2": "กําลังได้รับปัญหาการหยุดทํางาน",
     "responseTime": "เวลาในการตอบสนอง",
     "httpCode": "รหัสสเตตัส",
-    "incidentId": "รหัสของรหัสเหตุการณ์นี้",
+    "incidentId": "รหัสของเหตุการณ์นี้",
     "machineId": "หมายเลขเครื่อง",
     "responseMessage": "ข้อความที่ตอบสนอง",
     "errorMessage": "ข้อความที่ผิดพลาด"
