--- a/languages/EN.json
+++ b/languages/EN.json
@@ -31,7 +31,7 @@
   "versionStrings": {
     "defaultUpdateString": "A new Roblox version has been detected!",
     "topMessage1":"Version changed!",
-    "topMessage2":"Client version changed!,
+    "topMessage2":"Client version changed!",
     "topMessage3":"Bootstrapper version changed!",
     "oldVersion": "Old Version:",
     "newVersion": "New Version:"
