--- a/languages/ES.json
+++ b/languages/ES.json
@@ -3,12 +3,12 @@
     "defaultUpMessage": "API(s) que ha(n) vuelto",
     "defaultDegradedMessage": "API(s) que se ha(n) degradado",
     "defaultDownMessage": "API(s) que se ha(n) caído",
-    "upString1": "ha vuelto!",
+    "upString1": "ha vuelto.",
     "upString2": "ha mejorado su rendimiento.",
     "degradedString1": "está experimentando fallos.",
     "degradedString2": "ha degradado su rendimiento.",
     "downString1": "está caída.",
-    "downString2": "está experimentando un corte.",
+    "downString2": "está experimentando una caída.",
     "responseTime": "Tiempo de respuesta",
     "httpCode": "Código de estado",
     "incidentId": "Código de incidente",
@@ -23,10 +23,18 @@
     "addedString": "ha sido agregada!",
     "modifiedString": "ha sido modificada!",
     "deletedString": "ha sido removida!",
-    "oldValue": "Anterior valor:",
+    "oldValue": "Valor anterior:",
     "newValue": "Nuevo valor:",
     "value": "Valor:",
     "type": "Tipo de FFlag:"
+  },
+  "versionStrings": {
+    "defaultUpdateString": "¡Se ha detectado una nueva versión de Roblox!",
+    "topMessage1":"¡La versión cambió!",
+    "topMessage2":"¡La versión del cliente cambió!",
+    "topMessage3":"¡La versión del iniciador cambió!",
+    "oldVersion": "´Versión anterior:",
+    "newVersion": "Nueva versión:"
   },
   "metaStrings": {
     "name": "Spanish"
